--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -168,7 +168,7 @@
                 android:src="@drawable/hole" />
 
             <ImageButton
-                android:id="@+id/eigthMoleBtn"
+                android:id="@+id/eighthMoleBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
@@ -180,7 +180,7 @@
                 android:src="@drawable/hole" />
 
             <ImageButton
-                android:id="@+id/ninethMoleBtn"
+                android:id="@+id/ninthMoleBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
@@ -189,7 +189,7 @@
                 android:background="@android:color/transparent"
                 android:clickable="false"
                 android:scaleType="fitXY"
-                android:src="@drawable/mole" />
+                android:src="@drawable/hole" />
 
         </LinearLayout>
 
