--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -42,11 +42,13 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:background="@drawable/button_selector"
+        android:contentDescription="@string/pause_desc"
         android:padding="10dp"
         android:src="@drawable/pause_selector"
         android:visibility="visible"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="ImageContrastCheck" />
 
     <LinearLayout
         android:id="@+id/holeFieldLinLay"
@@ -63,7 +65,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:padding="15dp">
+            android:padding="15dp"
+            tools:ignore="ContentDescription">
 
             <ImageButton
                 android:id="@+id/firstMoleBtn"
@@ -75,7 +78,8 @@
                 android:background="@android:color/transparent"
                 android:clickable="false"
                 android:scaleType="fitXY"
-                android:src="@drawable/hole" />
+                android:src="@drawable/hole"
+                tools:ignore="SpeakableTextPresentCheck" />
 
             <ImageButton
                 android:id="@+id/secondMoleBtn"
@@ -87,7 +91,8 @@
                 android:background="@android:color/transparent"
                 android:clickable="false"
                 android:scaleType="fitXY"
-                android:src="@drawable/hole" />
+                android:src="@drawable/hole"
+                tools:ignore="SpeakableTextPresentCheck" />
 
             <ImageButton
                 android:id="@+id/thirdMoleBtn"
@@ -99,8 +104,8 @@
                 android:background="@android:color/transparent"
                 android:clickable="false"
                 android:scaleType="fitXY"
-                android:src="@drawable/hole" />
-
+                android:src="@drawable/hole"
+                tools:ignore="SpeakableTextPresentCheck" />
         </LinearLayout>
 
         <LinearLayout
@@ -108,7 +113,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:padding="10dp">
+            android:padding="10dp"
+            tools:ignore="ContentDescription">
 
             <ImageButton
                 android:id="@+id/fourthMoleBtn"
@@ -120,7 +126,8 @@
                 android:background="@android:color/transparent"
                 android:clickable="false"
                 android:scaleType="fitXY"
-                android:src="@drawable/hole" />
+                android:src="@drawable/hole"
+                tools:ignore="SpeakableTextPresentCheck" />
 
             <ImageButton
                 android:id="@+id/fifthMoleBtn"
@@ -132,7 +139,8 @@
                 android:background="@android:color/transparent"
                 android:clickable="false"
                 android:scaleType="fitXY"
-                android:src="@drawable/hole" />
+                android:src="@drawable/hole"
+                tools:ignore="SpeakableTextPresentCheck" />
 
             <ImageButton
                 android:id="@+id/sixthMoleBtn"
@@ -144,8 +152,8 @@
                 android:background="@android:color/transparent"
                 android:clickable="false"
                 android:scaleType="fitXY"
-                android:src="@drawable/hole" />
-
+                android:src="@drawable/hole"
+                tools:ignore="SpeakableTextPresentCheck" />
         </LinearLayout>
 
         <LinearLayout
@@ -153,7 +161,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:padding="10dp">
+            android:padding="10dp"
+            tools:ignore="ContentDescription">
 
             <ImageButton
                 android:id="@+id/seventhMoleBtn"
@@ -165,7 +174,8 @@
                 android:background="@android:color/transparent"
                 android:clickable="false"
                 android:scaleType="fitXY"
-                android:src="@drawable/hole" />
+                android:src="@drawable/hole"
+                tools:ignore="SpeakableTextPresentCheck" />
 
             <ImageButton
                 android:id="@+id/eighthMoleBtn"
@@ -177,7 +187,8 @@
                 android:background="@android:color/transparent"
                 android:clickable="false"
                 android:scaleType="fitXY"
-                android:src="@drawable/hole" />
+                android:src="@drawable/hole"
+                tools:ignore="SpeakableTextPresentCheck" />
 
             <ImageButton
                 android:id="@+id/ninthMoleBtn"
@@ -189,10 +200,8 @@
                 android:background="@android:color/transparent"
                 android:clickable="false"
                 android:scaleType="fitXY"
-                android:src="@drawable/hole" />
-
+                android:src="@drawable/hole"
+                tools:ignore="SpeakableTextPresentCheck" />
         </LinearLayout>
-
     </LinearLayout>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
