--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,9 +25,9 @@
         android:layout_marginHorizontal="32dp"
         android:layout_marginTop="64dp"
         android:text="@string/rules"
-        android:textSize="28sp"
         android:textAlignment="center"
         android:textColor="@color/black"
+        android:textSize="28sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
@@ -37,12 +37,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="Best: "
-        android:textSize="50dp"
+        android:textColor="@color/black"
+        android:textSize="48sp"
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        tools:text="Best: " />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/startGameBtn"
@@ -51,15 +52,15 @@
         android:layout_marginStart="48dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="48dp"
+        android:backgroundTint="#6D5437"
         android:paddingHorizontal="48dp"
         android:paddingVertical="8dp"
-        android:text="play"
-        app:rippleColor="#0A0908"
-        app:cornerRadius="48dp"
-        android:backgroundTint="#6D5437"
+        android:text="@string/play_btn"
         android:textSize="24sp"
+        app:cornerRadius="48dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/recordTxt" />
+        app:layout_constraintTop_toBottomOf="@id/recordTxt"
+        app:rippleColor="#0A0908" />
 </androidx.constraintlayout.widget.ConstraintLayout>
